updated submodule branches

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "claudia-bot"]
 	path = claudia-bot
 	url = git@github.com:IronicPickle/claudia-bot.git
+	branch = master
 [submodule "claudia-shared"]
 	path = claudia-shared
 	url = git@github.com:IronicPickle/claudia-shared.git
+	branch = master
 [submodule "claudia-server"]
 	path = claudia-server
 	url = git@github.com:IronicPickle/claudia-server.git
+	branch = master
 [submodule "claudia-client"]
 	path = claudia-client
 	url = git@github.com:IronicPickle/claudia-client.git
+	branch = master
